[gd_scene load_steps=10 format=3 uid="uid://dr155rncg3jot"]

[ext_resource type="Texture2D" uid="uid://b4g07ub54tlj2" path="res://assets/sprites/main/black.jpg" id="1_fj0fy"]
[ext_resource type="PackedScene" uid="uid://d1jbh8q1vrdd6" path="res://scenes/jon.tscn" id="2_5xmfk"]
[ext_resource type="Texture2D" uid="uid://gp6vk2qud6uf" path="res://assets/sprites/neon_dream/neon_tiles.png" id="2_31o3t"]
[ext_resource type="PackedScene" uid="uid://xc2xhvu62mnx" path="res://scenes/neon_blob.tscn" id="3_235o3"]
[ext_resource type="PackedScene" uid="uid://cweeavkt0lr32" path="res://scenes/neon_enemy.tscn" id="4_ofhwr"]
[ext_resource type="Script" path="res://scripts/enemy_combat_scripts/neon_enemy/neon_enemy_follow.gd" id="5_kh1fd"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_aqpve"]
texture = ExtResource("2_31o3t")
0:0/animation_columns = 1
0:0/0 = 0
1:0/animation_columns = 2
1:0/animation_separation = Vector2i(1, 0)
1:0/animation_frame_0/duration = 1.0
1:0/animation_frame_1/duration = 1.0
1:0/0 = 0
0:1/animation_columns = 1
0:1/0 = 0
1:1/animation_columns = 2
1:1/animation_separation = Vector2i(1, 0)
1:1/animation_frame_0/duration = 1.0
1:1/animation_frame_1/duration = 1.0
1:1/0 = 0

[sub_resource type="TileSet" id="TileSet_nckas"]
sources/0 = SubResource("TileSetAtlasSource_aqpve")

[sub_resource type="CircleShape2D" id="CircleShape2D_oo22p"]
radius = 94.4299

[node name="neon_dream" type="Node2D"]

[node name="black" type="Sprite2D" parent="."]
position = Vector2(1.00012, -62.0001)
scale = Vector2(1.31621, 1.55486)
texture = ExtResource("1_fj0fy")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_nckas")
format = 2

[node name="CharacterBody2D" parent="." instance=ExtResource("2_5xmfk")]

[node name="Camera2D" type="Camera2D" parent="CharacterBody2D"]
position = Vector2(-1, -26)
zoom = Vector2(5, 5)

[node name="StaticBody2D" parent="." instance=ExtResource("3_235o3")]
position = Vector2(59, 58)

[node name="CharacterBody2D2" parent="." instance=ExtResource("4_ofhwr")]
position = Vector2(-103, 85)
script = ExtResource("5_kh1fd")

[node name="EnemyRadius" type="Area2D" parent="CharacterBody2D2"]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D2/EnemyRadius"]
position = Vector2(0, -14)
shape = SubResource("CircleShape2D_oo22p")

[connection signal="area_entered" from="CharacterBody2D2/EnemyRadius" to="CharacterBody2D2" method="_on_enemy_radius_area_entered"]
[connection signal="area_exited" from="CharacterBody2D2/EnemyRadius" to="CharacterBody2D2" method="_on_enemy_radius_area_exited"]
